sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:3: error: not found: value getNombreVAleurs
  for (i<- 1 to getNombreVAleurs()-1){
                ^