sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for (i<- 1 to getNombreVAleurs()-1){
    var v=getValeur(i)
    while (i>=1 && plusPetit(i,i-1)){
      copie(i-1, i)
    }
    setValeur(i, v)
  }
}